Bug fixes  - Protection plan details, recovery job vm name is not visible.  - Show hide password in recoveryConfiguration.  - Status item renderer for item-init-inprogress and failed.

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -377,3 +377,20 @@ span.flatpickr-weekday {
 .logo-size{
   width: 30px;
 }
+.loginshowpass{
+  position: absolute;
+  right: 6%;
+  top: 64%;
+}
+.field-icon{
+  position: relative;
+  float: right;
+  bottom: 23px;
+  margin-right: 2%;
+}
+
+.login-icon{
+  position: relative;
+  float: right;
+  bottom: 44px;
+}
